Customize custom user model settings

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -2,14 +2,13 @@
 
 {% load static %}
 {% block title %}Home{% endblock title %}
-
 {% block content %}
 
     <!-- ========================= SECTION MAIN ========================= -->
     <section class="section-intro padding-y-sm">
         <div class="container">
             <div class="intro-banner-wrap">
-                <img src="images/banners/1.jpg" class="img-fluid rounded">
+                <img src="{% static 'images/banners/1.jpg' %}" class="img-fluid rounded">
             </div>
         </div> <!-- container //  -->
     </section>
