Modify index page template to display products

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -8,7 +8,7 @@
     <section class="section-intro padding-y-sm">
         <div class="container">
             <div class="intro-banner-wrap">
-                <img src="{% static 'images/banners/1.jpg' %}" class="img-fluid rounded">
+                <img src="{% static 'images/cover.jpg' %}" class="img-fluid rounded">
             </div>
         </div> <!-- container //  -->
     </section>
@@ -22,15 +22,21 @@
                 <h3 class="section-title">Popular products</h3>
             </header><!-- sect-heading -->
             <div class="row">
+                {% for product in products %}
                 <div class="col-md-3">
                     <div class="card card-product-grid">
-                        <a href="./product-detail.html" class="img-wrap"> <img src="{% static 'images/items/1.jpg' %}"> </a>
+                        <a href="#" class="img-wrap"> <img src="{{ product.image.url }}"></a>
                         <figcaption class="info-wrap">
-                            <a href="./product-detail.html" class="title">Just another product name</a>
-                            <div class="price mt-1">$179.00</div> <!-- price-wrap.// -->
+                            <a href="./product-detail.html" class="title">{{ product.name }}</a>
+                            {% if product.discount_price %}
+                                <div class="price mt-1">${{ product.discount_price }}</div> <!-- price-wrap.// -->
+                            {% else %}
+                                <div class="price mt-1">${{ product.original_price }}</div> <!-- price-wrap.// -->
+                            {% endif %}
                         </figcaption>
                     </div>
                 </div> <!-- col.// -->
+                {% endfor %}
             </div> <!-- row.// -->
 
         </div><!-- container // -->
