--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -18,7 +18,7 @@
     <section class="section-name padding-y-sm">
         <div class="container">
             <header class="section-heading">
-                <a href="./templates/core/store.html" class="btn btn-outline-primary float-right">See all</a>
+                <a href="{% url 'core:product_list' %}" class="btn btn-outline-primary float-right">See all</a>
                 <h3 class="section-title">Popular products</h3>
             </header><!-- sect-heading -->
             <div class="row">
