--- a/templates/_header.html
+++ b/templates/_header.html
@@ -61,28 +61,18 @@
                     <i class="fa fa-bars"></i> All category
                 </button>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#"
-                    >Machinery / Mechanical Parts / Tools
-                    </a>
-                    <a class="dropdown-item" href="#"
-                    >Consumer Electronics / Home Appliances
-                    </a>
-                    <a class="dropdown-item" href="#">Auto / Transportation</a>
-                    <a class="dropdown-item" href="#"
-                    >Apparel / Textiles / Timepieces
-                    </a>
-                    <a class="dropdown-item" href="#"
-                    >Home & Garden / Construction / Lights
-                    </a>
-                    <a class="dropdown-item" href="#"
-                    >Beauty & Personal Care / Health
-                    </a>
+                    <a href="{% url 'core:product_list' %}">All Products</a>
+                    {% for category in categories %}
+                        <a class="dropdown-item" href="{{ category.get_absolute_url }}">
+                        {{ category.name }}
+                        </a>
+                    {% endfor %}
                 </div>
                 </div>
                 <!-- category-wrap.// -->
             </div>
             <!-- col.// -->
-            <a href="./store.html" class="btn btn-outline-primary">Store</a>
+            <a href="{% url 'core:product_list' %}" class="btn btn-outline-primary">Store</a>
             <div class="col-lg col-md-6 col-sm-12 col">
                 <form action="#" class="search">
                 <div class="input-group w-100">
