--- a/templates/core/product_detail.html
+++ b/templates/core/product_detail.html
@@ -80,10 +80,14 @@
 							</div>
 							<!-- row.// -->
 							<hr />
-							<a href="./product-detail.html" class="btn btn-primary">
-							<span class="text">Add to cart</span>
-							<i class="fas fa-shopping-cart"></i>
-							</a>
+							{% if product.stock <= 0 %}
+								<p>Out of Stock</p>
+							{% else %}
+								<a href="./product-detail.html" class="btn btn-primary">
+								<span class="text">Add to cart</span>
+								<i class="fas fa-shopping-cart"></i>
+								</a>
+							{% endif %}
 						</article>
 					<!-- product-info-aside .// -->
 					</main>
