--- a/templates/core/product_list.html
+++ b/templates/core/product_list.html
@@ -35,13 +35,10 @@
             <div class="filter-content collapse show" id="collapse_1" style="">
               <div class="card-body">
                 <ul class="list-menu">
-                  <li><a href="#">People </a></li>
-                  <li><a href="#">Watches </a></li>
-                  <li><a href="#">Cinema </a></li>
-                  <li><a href="#">Clothes </a></li>
-                  <li><a href="#">Home items </a></li>
-                  <li><a href="#">Animals</a></li>
-                  <li><a href="#">People </a></li>
+                  <li><a href="{% url 'core:product_list' %}">All Products</a></li>
+                  {% for category in categories %}
+                    <li><a href="{{ category.get_absolute_url }}">{{ category.name }}</a></li>
+                  {% endfor %}
                 </ul>
               </div>
               <!-- card-body.// -->
@@ -145,7 +142,7 @@
         <header class="border-bottom mb-4 pb-3">
           <div class="form-inline">
             {% with product_list.count as total_products %}
-              <span class="mr-md-auto">{{ total_products }} Items found </span>
+              <span class="mr-md-auto">{{ total_products }} Item{{ total_products|pluralize }} found </span>
             {% endwith %}
           </div>
         </header>
@@ -156,12 +153,12 @@
             <div class="col-md-4">
               <figure class="card card-product-grid">
                 <div class="img-wrap">
-                  <img src="{{ product.image.url }}" />
+                  <a href="{{ product.get_absolute_url }}"><img src="{{ product.image.url }}" /></a>
                 </div>
                 <!-- img-wrap.// -->
                 <figcaption class="info-wrap">
                   <div class="fix-height">
-                    <a href="./product-detail.html" class="title"
+                    <a href="{{ product.get_absolute_url }}" class="title"
                       >{{ product.name }}</a
                     >
                     <div class="price-wrap mt-2">
