Add cart app and configure the settings

--- a/templates/_header.html
+++ b/templates/_header.html
@@ -61,7 +61,7 @@
                     <i class="fa fa-bars"></i> All category
                 </button>
                 <div class="dropdown-menu">
-                    <a href="{% url 'core:product_list' %}">All Products</a>
+                    <a class="dropdown-item" href="{% url 'core:product_list' %}">All Products</a>
                     {% for category in categories %}
                         <a class="dropdown-item" href="{{ category.get_absolute_url }}">
                         {{ category.name }}
@@ -103,7 +103,7 @@
                     <a href="./register.html"> Register</a>
                     </div>
                 </div>
-                <a href="./cart.html" class="widget-header pl-3 ml-3">
+                <a href="{% url 'cart:cart' %}" class="widget-header pl-3 ml-3">
                     <div class="icon icon-sm rounded-circle border">
                     <i class="fa fa-shopping-cart"></i>
                     </div>
