--- a/templates/_base.html
+++ b/templates/_base.html
@@ -26,7 +26,7 @@
 
     <!-- Font awesome 5 -->
     <link
-      href="fonts/fontawesome/css/all.min.css"
+      href="{% static 'fonts/fontawesome/css/all.min.css' %}"
       type="text/css"
       rel="stylesheet"
     />
