--- a/templates/core/product_detail.html
+++ b/templates/core/product_detail.html
@@ -83,7 +83,7 @@
 							{% if product.stock <= 0 %}
 								<p>Out of Stock</p>
 							{% else %}
-								<a href="./product-detail.html" class="btn btn-primary">
+								<a href="{% url 'cart:add_to_cart' product.slug %}" class="btn btn-primary">
 								<span class="text">Add to cart</span>
 								<i class="fas fa-shopping-cart"></i>
 								</a>
