--- a/templates/cart/cart.html
+++ b/templates/cart/cart.html
@@ -7,8 +7,7 @@
 
     <section class="section-content padding-y bg">
       <div class="container">
-        <!-- ============================ COMPONENT 1 ================================= -->
-
+        {% if cart_items %}
         <div class="row">
           <aside class="col-lg-9">
             <div class="card">
@@ -22,7 +21,7 @@
                   </tr>
                 </thead>
                 <tbody>
-                  {% for cart_item in cart_items%}
+                  {% for cart_item in cart_items %}
                   <tr>
                     <td>
                       <figure class="itemside align-items-center">
@@ -30,7 +29,7 @@
                           <img src="{{ cart_item.product.image.url }}" class="img-sm" />
                         </div>
                         <figcaption class="info">
-                          <a href="#" class="title text-dark"
+                          <a href="{{ cart_item.product.get_absolute_url }}" class="title text-dark"
                             >{{ cart_item.product.name }}</a
                           >
                           <p class="text-muted small">
@@ -41,17 +40,17 @@
                       </figure>
                     </td>
                     <td>
-                      <!-- col.// -->
                       <div class="col">
                         <div class="input-group input-spinner">
                           <div class="input-group-prepend">
-                            <button
+                            <a
+                              href="{% url 'cart:remove_single_from_cart' cart_item.product.slug %}"
                               class="btn btn-light"
                               type="button"
                               id="button-plus"
                             >
                               <i class="fa fa-minus"></i>
-                            </button>
+                            </a>
                           </div>
                           <input type="text" class="form-control" value="{{ cart_item.quantity }}" />
                           <div class="input-group-append">
@@ -65,43 +64,39 @@
                             </a>
                           </div>
                         </div>
-                        <!-- input-group.// -->
                       </div>
-                      <!-- col.// -->
                     </td>
                     <td>
                       <div class="price-wrap">
                         <var class="price">${{ cart_item.get_subtotal }}</var>
                         <small class="text-muted"> ${{ cart_item.get_price }} each </small>
                       </div>
-                      <!-- price-wrap .// -->
                     </td>
                     <td class="text-right">
-                      <a href="" class="btn btn-danger"> Remove</a>
+                      <a href="{% url 'cart:remove_from_cart' cart_item.product.slug %}" class="btn btn-danger"> Remove</a>
                     </td>
                   </tr>
                   {% endfor %}
                 </tbody>
               </table>
             </div>
-            <!-- card.// -->
           </aside>
-          <!-- col.// -->
+          
           <aside class="col-lg-3">
             <div class="card">
               <div class="card-body">
                 <dl class="dlist-align">
                   <dt>Total price:</dt>
-                  <dd class="text-right">$69.97</dd>
+                  <dd class="text-right">${{ cart.get_total }}</dd>
                 </dl>
                 <dl class="dlist-align">
                   <dt>Tax:</dt>
-                  <dd class="text-right">${{ cart}}</dd>
+                  <dd class="text-right">${{ cart.get_tax }}</dd>
                 </dl>
                 <dl class="dlist-align">
                   <dt>Total:</dt>
                   <dd class="text-right text-dark b">
-                    <strong>$59.97</strong>
+                    <strong>${{ cart.get_total_with_tax }}</strong>
                   </dd>
                 </dl>
                 <hr />
@@ -111,20 +106,22 @@
                 <a href="./place-order.html" class="btn btn-primary btn-block">
                   Checkout
                 </a>
-                <a href="./store.html" class="btn btn-light btn-block"
+                <a href="{% url 'core:product_list' %}" class="btn btn-light btn-block"
                   >Continue Shopping</a
                 >
               </div>
-              <!-- card-body.// -->
             </div>
-            <!-- card.// -->
           </aside>
-          <!-- col.// -->
         </div>
-        <!-- row.// -->
-        <!-- ============================ COMPONENT 1 END .// ================================= -->
+        {% else %}
+        <h2 class="text-center">Your shopping cart is empty.</h2>
+        <br>
+        <div class="text-center">
+          <a href="{% url 'core:product_list' %}" class="btn btn-primary">Continue Shopping</a>
+        </div>
+        {% endif %}
+
       </div>
-      <!-- container .//  -->
     </section>
 
 {% endblock content %}
