--- a/templates/core/product_detail.html
+++ b/templates/core/product_detail.html
@@ -81,11 +81,20 @@
 							<!-- row.// -->
 							<hr />
 							{% if product.stock <= 0 %}
-								<p>Out of Stock</p>
+								<h5 class="text-danger">Out of Stock</h5>
+							{% elif in_cart %}
+								<a href="#" class="btn btn-success mr-2">
+									<span class="text">Added to cart</span>
+									<i class="fas fa-check"></i>
+								</a>
+								<a href="{% url 'cart:cart' %}" class="btn btn-outline-primary">
+									<span class="text">View Cart</span>
+									<i class="fas fa-eye"></i>
+								</a>
 							{% else %}
 								<a href="{% url 'cart:add_to_cart' product.slug %}" class="btn btn-primary">
-								<span class="text">Add to cart</span>
-								<i class="fas fa-shopping-cart"></i>
+									<span class="text">Add to cart</span>
+									<i class="fas fa-shopping-cart"></i>
 								</a>
 							{% endif %}
 						</article>
