--- a/templates/core/product_list.html
+++ b/templates/core/product_list.html
@@ -159,11 +159,10 @@
                         {% endif %}
                       </div>
                     </div>
-                    {% if not added_to_cart %}
-                      <a href="{% url 'cart:add_to_cart' product.slug %}" class="btn btn-block btn-primary">Add to cart </a>
+                    {% if product.stock < 1 %}
+                      <h5 class="text-danger">Out of Stock</h5>
                     {% else %}
-                      <a href="#" class="btn btn-block btn-sucess">Added to cart </a>
-                      {% comment %} <a href="{% url 'cart:cart' %}" class="btn btn-block btn-secondary">View Cart</a> {% endcomment %}
+                      <a href="{% url 'cart:add_to_cart' product.slug %}" class="btn btn-block btn-primary">Add to cart </a>
                     {% endif %}
                   </figcaption>
                 </figure>
@@ -173,16 +172,37 @@
           <!-- row end.// -->
 
           <nav class="mt-4" aria-label="Page navigation sample">
-            <ul class="pagination">
-              <li class="page-item disabled">
-                <a class="page-link" href="#">Previous</a>
-              </li>
-              <li class="page-item active">
-                <a class="page-link" href="#">1</a>
-              </li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
-              <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            <ul class="pagination justify-content-center">
+              {% if page_obj.has_previous %}
+                <li class="page-item">
+                  <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                </li>
+              {% else %}
+                <li class="page-item disabled">
+                  <a class="page-link" href="#" tabindex="-1" aria-disabled="True">Previous</a>
+                </li>
+              {% endif %}
+
+              {% for i in page_obj.paginator.page_range %}
+                {% if i == page_obj.number %}
+                  <li class="page-item active">
+                    <span class="page-link">{{ i }}</span>
+                  </li>
+                {% else %}
+                  <li class="page-item">
+                    <a class="page-link" href="?page={{ i }}">{{ i }}</a>
+                  </li>
+                {% endif %}
+              {% endfor %}
+              {% if page_obj.has_next %}
+                <li class="page-item">
+                  <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+                </li>
+              {% else %}
+                <li class="page-item disabled">
+                  <a class="page-link" href="#" tabindex="-1" aria-disabled="True">Next</a>
+                </li>
+              {% endif %}
             </ul>
           </nav>
         </main>
