--- a/templates/_header.html
+++ b/templates/_header.html
@@ -74,21 +74,22 @@
             <!-- col.// -->
             <a href="{% url 'core:product_list' %}" class="btn btn-outline-primary">Store</a>
             <div class="col-lg col-md-6 col-sm-12 col">
-                <form action="#" class="search">
-                <div class="input-group w-100">
-                    <input
-                    type="text"
-                    class="form-control"
-                    style="width: 60%"
-                    placeholder="Search"
-                    />
+                <form action="{% url 'core:search_results' %}h" class="search" method="get">
+                    <div class="input-group w-100">
+                        <input
+                        name="keyword"
+                        type="text"
+                        class="form-control"
+                        style="width: 60%"
+                        placeholder="Search"
+                        />
 
-                    <div class="input-group-append">
-                    <button class="btn btn-primary" type="submit">
-                        <i class="fa fa-search"></i>
-                    </button>
+                        <div class="input-group-append">
+                        <button class="btn btn-primary" type="submit">
+                            <i class="fa fa-search"></i>
+                        </button>
+                        </div>
                     </div>
-                </div>
                 </form>
                 <!-- search-wrap .end// -->
             </div>
