--- a/templates/core/product_detail.html
+++ b/templates/core/product_detail.html
@@ -58,7 +58,7 @@
 								<hr />
 								{% if product.stock <= 0 %}
 									<h5 class="text-danger">Out of Stock</h5>
-								{% elif in_cart %}
+								{% comment %} {% elif in_cart %}
 									<a href="#" class="btn btn-success mr-2">
 										<span class="text">Added to cart</span>
 										<i class="fas fa-check"></i>
@@ -66,7 +66,7 @@
 									<a href="{% url 'cart:cart' %}" class="btn btn-outline-primary">
 										<span class="text">View Cart</span>
 										<i class="fas fa-eye"></i>
-									</a>
+									</a> {% endcomment %}
 								{% else %}
 									<button type="submit" class="btn btn-primary">
 										<span class="text">Add to cart</span>
