--- a/templates/core/product_list.html
+++ b/templates/core/product_list.html
@@ -167,7 +167,7 @@
                         {% if product.stock < 1 %}
                           <h5 class="text-danger">Out of Stock</h5>
                         {% else %}
-                          <a href="{% url 'cart:add_to_cart' product.slug %}" class="btn btn-block btn-primary">Add to cart </a>
+                          <a href="{{ product.get_absolute_url }}" class="btn btn-block btn-primary">View Details</a>
                         {% endif %}
                       </figcaption>
                     </figure>
